force-app/main/default/objects/vlocity_cmt__RuleAssignment__c/vlocity_cmt__RuleAssignment__c.object-meta.xml
<CustomObject>
    <description>Represents the attachment of a Vlocity Context Rule to something such as a Product, Promotion, Price List or Price List Entry.</description>
    <label>Vlocity Rule Assignment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Rule Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>