force-app/main/default/objects/vlocity_cmt__RuleAssignment__c/fields/vlocity_cmt__HeaderId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__HeaderId__c</fullName>
    <formula>vlocity_cmt__RuleId__r.vlocity_cmt__HeaderId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HeaderId</label>
    <type>Text</type>
</CustomField>