force-app/main/default/objects/vlocity_cmt__RuleAssignment__c/fields/vlocity_cmt__RuleType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__RuleType__c</fullName>
    <formula>TEXT(vlocity_cmt__RuleId__r.vlocity_cmt__RuleType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rule Type</label>
    <type>Text</type>
</CustomField>